--- a/Regex_Book_Analysis.ipynb
+++ b/Regex_Book_Analysis.ipynb
@@ -1287,7 +1287,7 @@
     }
    ],
    "source": [
-    "d_list = [(key, value) for (key, value) in d.items()]\n",
+    "d_ist = [(key, value) for (key, value) in d.items()]\n",
     "sorted(d_list, reverse=True)"
    ]
   },
